RESOLVED FIXED143911
REGRESSION (r181656): Animated tiled layers are missing content
https://bugs.webkit.org/show_bug.cgi?id=143911
Summary REGRESSION (r181656): Animated tiled layers are missing content
Simon Fraser (smfr)
Reported 2015-04-17 18:35:44 PDT
REGRESSION (r181656): Animated tiled layers are missing content
Attachments
Patch (40.04 KB, patch)
2015-04-18 11:45 PDT, Simon Fraser (smfr)
darin: review+
Simon Fraser (smfr)
Comment 1 2015-04-18 11:45:45 PDT
Simon Fraser (smfr)
Comment 2 2015-04-18 11:46:16 PDT
Darin Adler
Comment 3 2015-04-18 12:12:40 PDT
Comment on attachment 251094 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=251094&action=review Should fix incorrect use of PassRefPtr; deprecated now. > Source/WebCore/dom/ScriptedAnimationController.h:94 > + virtual PassRefPtr<DisplayRefreshMonitor> createDisplayRefreshMonitor(PlatformDisplayID) const override; This should be RefPtr, not PassRefPtr. > Source/WebCore/page/ChromeClient.h:289 > + virtual PassRefPtr<DisplayRefreshMonitor> createDisplayRefreshMonitor(PlatformDisplayID) const { return nullptr; } This should be RefPtr, not PassRefPtr. > Source/WebCore/platform/graphics/DisplayRefreshMonitorClient.h:47 > + virtual PassRefPtr<DisplayRefreshMonitor> createDisplayRefreshMonitor(PlatformDisplayID) const = 0; This should be RefPtr, not PassRefPtr. > Source/WebCore/platform/graphics/GraphicsLayerUpdater.cpp:82 > +PassRefPtr<DisplayRefreshMonitor> GraphicsLayerUpdater::createDisplayRefreshMonitor(PlatformDisplayID displayID) const This should be RefPtr, not PassRefPtr. > Source/WebCore/platform/graphics/GraphicsLayerUpdater.h:41 > + virtual PassRefPtr<DisplayRefreshMonitor> createDisplayRefreshMonitor(PlatformDisplayID) const = 0; This should be RefPtr, not PassRefPtr. > Source/WebCore/platform/graphics/GraphicsLayerUpdater.h:58 > + virtual PassRefPtr<DisplayRefreshMonitor> createDisplayRefreshMonitor(PlatformDisplayID) const override; This should be RefPtr, not PassRefPtr. > Source/WebCore/rendering/RenderLayerCompositor.cpp:4166 > +PassRefPtr<DisplayRefreshMonitor> RenderLayerCompositor::createDisplayRefreshMonitor(PlatformDisplayID displayID) const This should be RefPtr, not PassRefPtr. > Source/WebCore/rendering/RenderLayerCompositor.h:406 > + PassRefPtr<DisplayRefreshMonitor> createDisplayRefreshMonitor(PlatformDisplayID) const override; This should be RefPtr, not PassRefPtr. > Source/WebCore/testing/Internals.cpp:2074 > + ec = INVALID_ACCESS_ERR; I don’t understand why having a null FrameView means INVALID_ACCESS_ERR but having a null RenderView means “silently do nothing”. But it’s just testing code, so no big deal I guess.
Simon Fraser (smfr)
Comment 4 2015-04-18 12:18:00 PDT
It's sad that nothing in the PassRefPtr header mentions it being deprecated.
Simon Fraser (smfr)
Comment 5 2015-04-18 12:40:49 PDT
Darin Adler
Comment 6 2015-04-19 09:12:56 PDT
(In reply to comment #4) > It's sad that nothing in the PassRefPtr header mentions it being deprecated. I think I’m going to rename it to DeprecatedPassRefPtr soon.
Note You need to log in before you can comment on or make changes to this bug.