Source/WebCore/platform/graphics/DisplayRefreshMonitor.cpp
@@ -35,21 +35,20 @@
 
 namespace WebCore {
 
-RefPtr<DisplayRefreshMonitor> DisplayRefreshMonitor::create(DisplayRefreshMonitorClient* client)
+RefPtr<DisplayRefreshMonitor> DisplayRefreshMonitor::createDefaultDisplayRefreshMonitor(PlatformDisplayID displayID)
 {
-    PlatformDisplayID displayID = client->displayID();
-
-    if (Optional<RefPtr<DisplayRefreshMonitor>> monitor = client->createDisplayRefreshMonitor(displayID))
-        return monitor.value();
-
-    // If ChromeClient returned Nullopt, we'll make one of the default type.
-
 #if PLATFORM(MAC)
     return DisplayRefreshMonitorMac::create(displayID);
 #endif
 #if PLATFORM(IOS)
     return DisplayRefreshMonitorIOS::create(displayID);
 #endif
+    return nullptr;
+}
+
+RefPtr<DisplayRefreshMonitor> DisplayRefreshMonitor::create(DisplayRefreshMonitorClient& client)
+{
+    return client.createDisplayRefreshMonitor(client.displayID());
 }
 
 DisplayRefreshMonitor::DisplayRefreshMonitor(PlatformDisplayID displayID)
@@ -73,16 +72,16 @@ void DisplayRefreshMonitor::handleDisplayRefreshedNotificationOnMainThread(void*
     monitor->displayDidRefresh();
 }
 
-void DisplayRefreshMonitor::addClient(DisplayRefreshMonitorClient* client)
+void DisplayRefreshMonitor::addClient(DisplayRefreshMonitorClient& client)
 {
-    m_clients.add(client);
+    m_clients.add(&client);
 }
 
-bool DisplayRefreshMonitor::removeClient(DisplayRefreshMonitorClient* client)
+bool DisplayRefreshMonitor::removeClient(DisplayRefreshMonitorClient& client)
 {
     if (m_clientsToBeNotified)
-        m_clientsToBeNotified->remove(client);
-    return m_clients.remove(client);
+        m_clientsToBeNotified->remove(&client);
+    return m_clients.remove(&client);
 }
 
 void DisplayRefreshMonitor::displayDidRefresh()
@@ -126,7 +125,7 @@ void DisplayRefreshMonitor::displayDidRefresh()
         m_previousFrameDone = true;
     }
     
-    DisplayRefreshMonitorManager::sharedManager().displayDidRefresh(this);
+    DisplayRefreshMonitorManager::sharedManager().displayDidRefresh(*this);
 }
 
 }
